--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -111,18 +111,18 @@ span.subtitle-blue {
     position: absolute;
     top: 0;
     height: 60px;
-    width: 33.333%;
+    width: 24.333%;
     text-align: center;
 }
 .col-left-75 {
-    width: 66.666%;
+    width: 75.555%;
     float: left;
     position: relative;
     display: flex;
     min-height: 5px;
 }
 .col-right-35 {
-    width: 33%;
+    width: 24.333%;
     float: left;
     box-shadow: -2px 0px 10px 2px rgba(218, 218, 218, 0.54);
     border-left: 1px solid #e9e9e9;
@@ -144,6 +144,29 @@ div#pro {
     width: 45%;
     vertical-align: middle;
     margin-top: 15vh;
+}
+.inner-cont {
+    display: inline-block;
+    margin: 0 auto;
+    padding: 80px 80px;
+    position: relative;
+    height: 30vh;
+    border: 1px solid transparent;
+}
+.drag-n-drop:after {
+    content: url(../dndicon.png);
+    opacity: .25;
+}
+.drag-n-drop {
+    border: 4px dotted #eaeaea;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -ms-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+}
+.drag-n-drop:hover {
+    background: rgba(245, 245, 245, 0.71);
 }
 .wb-btn {
     background: #fff;
@@ -284,27 +307,39 @@ input:focus, input:hover, textarea:active, textarea:focus, textarea:hover {
 
 nav .drop-down {
     list-style: none;
-    overflow: hidden; /* When ul height is reduced, ensure overflowing li are not shown */
-    height: 172px; /* 172px = (38 (li) + 5 (li border)) * 4 (number of li) */
-    /*background-color: #34495e;*/
-    /*font-family: Arial;*/
-    width: 200px;
+    overflow: hidden;
+    /*height: 172px; /!* 172px = (38 (li) + 5 (li border)) * 4 (number of li) *!/*/
+    min-width: 200px;
+    width: auto;
     margin: 0 auto;
-    /*padding: 0;*/
     text-align: center;
     -webkit-transition: height 0.3s ease;
     transition: height 0.3s ease;
 }
 
 nav .drop-down.closed {
-    /*  When toggled via jQuery this class will reduce the height of the ul which inconjuction
-        with overflow: hidden set on the ul will hide all list items apart from the first */
     /* current li height 38px + 5px border */
-    height: 50px;
+    height: 40px;
+}
+nav .drop-down li:first-child a:hover {
+    background: #03a9f4;
+    color: #fff;
+
+}
+nav .drop-down li:first-child a {
+    text-align: center;
+    width: 30px;
 }
 
-nav .drop-down li {
-    /*border-bottom: 5px solid #2c3e50;*/
+ul.drop-down li {
+    background: rgba(183, 183, 183, 0.17);
+    border-bottom: 1px solid #fff;
+}
+ul.drop-down li:first-child {
+    background: none;
+    border-bottom: 1px solid #fff;
+    position: relative;
+    left: 150px;
 }
 nav li a.nav-button {
     font-size: 1.6em;
@@ -315,8 +350,16 @@ nav .drop-down li a {
     display: block;
     color: #999;
     padding: 10px; /* Larger touch target area */
+    -webkit-transition: .4s;
+    -moz-transition: .4s;
+    -ms-transition: .4s;
+    -o-transition: .4s;
+    transition: .4s;
 }
-
+nav .drop-down li a:hover {
+    background: #03a9f4;
+    color: #fff;
+}
 .g-signin2 img {
     width: 200px;
 }
@@ -514,15 +557,19 @@ button.copy-button {
 
 @keyframes foldOutLeft {
     0% {
-        transform: translateX(0);
+        width:3%;
     }
     20% {
-        opacity: 1;
-        transform: translateX(-20px);
+        width:10%;
+    }
+    50% {
+        width:18%;
+    }
+    70% {
+        width:25%;
     }
     100% {
-        opacity: 0;
-        transform: translateX(2000px);
+        width:33%;
     }
 }
 
