--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -49,7 +49,7 @@ h5{font-size:1.2em;}
 .height100 {
     height: 100vh;
     /*overflow: hidden;*/
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .flex-cont {
     text-align: center;
@@ -83,7 +83,9 @@ h5{font-size:1.2em;}
 .text-center {
     text-align: center;
 }
-
+.text-left {
+    text-align:left;
+}
 .hamburger {
     float: right;
     margin: 10px 10px;
@@ -223,6 +225,12 @@ div#pro {
 .upload-icon:before {
     content:"\21A5";
 }
+.plus-icon {
+    padding: 4px 13px;
+}
+.plus-icon:after {
+    content: "+";
+}
 .check-icon {
     padding: 20px 21px;
 }
@@ -240,6 +248,13 @@ span.file-name, span.title-line {
 span.sent-by span {
     display: inline;
     font-weight: bold;
+}
+button#add-file {
+    float: right;
+    z-index: 999;
+    position: relative;
+    left: -5px;
+    top: -40px;
 }
 button.btn-download:after {
     content: "\21A7";
@@ -311,7 +326,7 @@ p.targetMsg {
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .1) inset;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .1) inset;
 }
-.login-form input[type="text"] {
+.login-form input[type="text"], .login-form input[type="password"] {
     padding: 10px;
     margin: 10px;
     border:0;
@@ -332,7 +347,6 @@ nav .drop-down {
     -webkit-transition: height 0.3s ease;
     transition: height 0.3s ease;
 }
-
 nav .drop-down.closed {
     /* current li height 38px + 5px border */
     height: 40px;
